--- a/index.html
+++ b/index.html
@@ -1083,13 +1083,14 @@
 <body>
     <!-- Thông điệp chúc mừng-->
     <div class="center-message">
+        <strong>Open</strong>
         <strong>Chúc mừng 20-10</strong>
         <span id="centerText">
-            Chúc em bé ngày Phụ nữ Việt Nam<br>
+            Chúc em ngày Phụ nữ Việt Nam<br>
             luôn rạng rỡ, hạnh phúc và tràn đầy yêu thương!<br>
             Yêu Em<br>
             "đừng quên mở hộp quà và hoa nhé"<br>
-            《 19phm 》
+            <strong>《 19phm 》</strong>
         </span>
     </div>
 
