--- a/index.html
+++ b/index.html
@@ -1083,7 +1083,7 @@
 <body>
     <!-- Thông điệp chúc mừng-->
     <div class="center-message">
-        <strong>Open</strong>
+        <strong>Ấn vào đây💌</strong>
         <strong>Chúc mừng 20-10</strong>
         <span id="centerText">
             Chúc em ngày Phụ nữ Việt Nam<br>
